cange rust version to 2018

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -2,6 +2,7 @@
 name = "client"
 version = "0.1.0"
 authors = ["VictoremWinbringer <victor@mail.ru>"]
+edition = "2018"
 
 [dependencies]
 text_io = "*"
